# advent-of-code

./: .gitignore  README.md  pyproject.toml
aoc/: __main__.py
aoc/year2024/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py
