[project]
name = "advent-of-code"
version = "0.1.0"
authors = [{ name = "Ferdinand Keller", email = "ferdinand.keller@proton.me" }]
description = "Advent of Code Solutions"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = ["loguru>=0.7.2", "requests>=2.32.3"]

[dependency-groups]
dev = ["ruff>=0.8.1"]
